[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Yuhen Liubimov <yauhenliubimau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt5 = "^5.15.9"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79